Day3/ingress/hello-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello
  name: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - image: tektutor/spring-ms:1.0
        name: hello 
        imagePullPolicy: IfNotPresent
